// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Content should render with isShowNavContent disable 1`] = `
<NavContent
  isShowNavContent={false}
>
  <NavContent__NavContainer
    isShowNavContent={false}
  >
    <div
      className="NavContent__NavContainer-sc-1iay8fd-0 dlaiAn"
    >
      <MobileContainer>
        <Container
          className="MobileContainer-phmkm8-0 hUiOpP"
          fluid={false}
        >
          <div
            className="MobileContainer-phmkm8-0 hUiOpP container"
          >
            <Row
              noGutters={false}
            >
              <div
                className="row"
              >
                <Col
                  lg={2}
                >
                  <div
                    className="col-lg-2"
                  >
                    <NavLogo>
                      <NavLogo__Logo
                        href="https://github.com/DeKal/portfolio-next-js"
                      >
                        <a
                          className="NavLogo__Logo-sc-100re03-0 jbuBiQ"
                          href="https://github.com/DeKal/portfolio-next-js"
                        >
                          <NavLogo__LogoText>
                            <span
                              className="NavLogo__LogoText-sc-100re03-1 haQzGG"
                            >
                              PH
                            </span>
                          </NavLogo__LogoText>
                        </a>
                      </NavLogo__Logo>
                    </NavLogo>
                  </div>
                </Col>
                <NavContent__MobileCol
                  fluid="true"
                >
                  <Col
                    className="NavContent__MobileCol-sc-1iay8fd-1 izjouu"
                    fluid="true"
                  >
                    <div
                      className="NavContent__MobileCol-sc-1iay8fd-1 izjouu col"
                      fluid="true"
                    >
                      <NavContent__NavMenu>
                        <nav
                          className="NavContent__NavMenu-sc-1iay8fd-2 houaGH"
                        >
                          <NavContent__NavUl>
                            <ul
                              className="NavContent__NavUl-sc-1iay8fd-3 kNpwGc"
                            >
                              <NavContent__NavLi
                                key="Home"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "Icon": <FaHome
                                          size="23px"
                                        />,
                                        "cmpName": "Home",
                                        "isShowOnMobile": true,
                                        "name": "Home",
                                        "url": "/#Home",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/#Home"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/#Home"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Home"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Home"
                                          >
                                            Missing translationId: Home for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                              <NavContent__NavLi
                                key="Experiences"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "Icon": <FaBriefcase
                                          size="23px"
                                        />,
                                        "cmpName": "Experiences",
                                        "isShowOnMobile": true,
                                        "name": "Experiences",
                                        "url": "/#Experiences",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/#Experiences"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/#Experiences"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Experiences"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Experiences"
                                          >
                                            Missing translationId: Experiences for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                              <NavContent__NavLi
                                key="Projects"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "Icon": <FaCode
                                          size="23px"
                                        />,
                                        "cmpName": "Projects",
                                        "isShowOnMobile": true,
                                        "name": "Projects",
                                        "url": "/#Projects",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/#Projects"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/#Projects"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Projects"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Projects"
                                          >
                                            Missing translationId: Projects for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                              <NavContent__NavLi
                                key="Certifications"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "Icon": <FaMedal
                                          size="23px"
                                        />,
                                        "cmpName": "Certifications",
                                        "isShowOnMobile": true,
                                        "name": "Certifications",
                                        "url": "/#Certifications",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/#Certifications"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/#Certifications"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Certifications"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Certifications"
                                          >
                                            Missing translationId: Certifications for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                              <NavContent__NavLi
                                key="Contacts"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "Icon": <FaAddressBook
                                          size="23px"
                                        />,
                                        "cmpName": "Contacts",
                                        "isShowOnMobile": true,
                                        "name": "Contacts",
                                        "url": "/#Contacts",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/#Contacts"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/#Contacts"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Contacts"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Contacts"
                                          >
                                            Missing translationId: Contacts for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                              <NavContent__NavLi
                                key="Blogs"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "cmpName": "blogs",
                                        "isShowOnMobile": false,
                                        "name": "Blogs",
                                        "url": "/blogs",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/blogs"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/blogs"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Blogs"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Blogs"
                                          >
                                            Missing translationId: Blogs for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                            </ul>
                          </NavContent__NavUl>
                        </nav>
                      </NavContent__NavMenu>
                    </div>
                  </Col>
                </NavContent__MobileCol>
              </div>
            </Row>
          </div>
        </Container>
      </MobileContainer>
    </div>
  </NavContent__NavContainer>
</NavContent>
`;

exports[`Nav Content should render with isShowNavContent enable 1`] = `
<NavContent
  isShowNavContent={true}
>
  <NavContent__NavContainer
    isShowNavContent={true}
  >
    <div
      className="NavContent__NavContainer-sc-1iay8fd-0 kCwmX"
    >
      <MobileContainer>
        <Container
          className="MobileContainer-phmkm8-0 hUiOpP"
          fluid={false}
        >
          <div
            className="MobileContainer-phmkm8-0 hUiOpP container"
          >
            <Row
              noGutters={false}
            >
              <div
                className="row"
              >
                <Col
                  lg={2}
                >
                  <div
                    className="col-lg-2"
                  >
                    <NavLogo>
                      <NavLogo__Logo
                        href="https://github.com/DeKal/portfolio-next-js"
                      >
                        <a
                          className="NavLogo__Logo-sc-100re03-0 jbuBiQ"
                          href="https://github.com/DeKal/portfolio-next-js"
                        >
                          <NavLogo__LogoText>
                            <span
                              className="NavLogo__LogoText-sc-100re03-1 haQzGG"
                            >
                              PH
                            </span>
                          </NavLogo__LogoText>
                        </a>
                      </NavLogo__Logo>
                    </NavLogo>
                  </div>
                </Col>
                <NavContent__MobileCol
                  fluid="true"
                >
                  <Col
                    className="NavContent__MobileCol-sc-1iay8fd-1 izjouu"
                    fluid="true"
                  >
                    <div
                      className="NavContent__MobileCol-sc-1iay8fd-1 izjouu col"
                      fluid="true"
                    >
                      <NavContent__NavMenu>
                        <nav
                          className="NavContent__NavMenu-sc-1iay8fd-2 houaGH"
                        >
                          <NavContent__NavUl>
                            <ul
                              className="NavContent__NavUl-sc-1iay8fd-3 kNpwGc"
                            >
                              <NavContent__NavLi
                                key="Home"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "Icon": <FaHome
                                          size="23px"
                                        />,
                                        "cmpName": "Home",
                                        "isShowOnMobile": true,
                                        "name": "Home",
                                        "url": "/#Home",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/#Home"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/#Home"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Home"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Home"
                                          >
                                            Missing translationId: Home for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                              <NavContent__NavLi
                                key="Experiences"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "Icon": <FaBriefcase
                                          size="23px"
                                        />,
                                        "cmpName": "Experiences",
                                        "isShowOnMobile": true,
                                        "name": "Experiences",
                                        "url": "/#Experiences",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/#Experiences"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/#Experiences"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Experiences"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Experiences"
                                          >
                                            Missing translationId: Experiences for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                              <NavContent__NavLi
                                key="Projects"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "Icon": <FaCode
                                          size="23px"
                                        />,
                                        "cmpName": "Projects",
                                        "isShowOnMobile": true,
                                        "name": "Projects",
                                        "url": "/#Projects",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/#Projects"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/#Projects"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Projects"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Projects"
                                          >
                                            Missing translationId: Projects for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                              <NavContent__NavLi
                                key="Certifications"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "Icon": <FaMedal
                                          size="23px"
                                        />,
                                        "cmpName": "Certifications",
                                        "isShowOnMobile": true,
                                        "name": "Certifications",
                                        "url": "/#Certifications",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/#Certifications"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/#Certifications"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Certifications"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Certifications"
                                          >
                                            Missing translationId: Certifications for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                              <NavContent__NavLi
                                key="Contacts"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "Icon": <FaAddressBook
                                          size="23px"
                                        />,
                                        "cmpName": "Contacts",
                                        "isShowOnMobile": true,
                                        "name": "Contacts",
                                        "url": "/#Contacts",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/#Contacts"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/#Contacts"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Contacts"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Contacts"
                                          >
                                            Missing translationId: Contacts for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                              <NavContent__NavLi
                                key="Blogs"
                              >
                                <li
                                  className="NavContent__NavLi-sc-1iay8fd-4 kxPFKS"
                                >
                                  <NavItem
                                    isMobile={false}
                                    isSelected={false}
                                    page={
                                      Object {
                                        "cmpName": "blogs",
                                        "isShowOnMobile": false,
                                        "name": "Blogs",
                                        "url": "/blogs",
                                      }
                                    }
                                    setSelectedPage={[Function]}
                                  >
                                    <NavItem__Container
                                      data-test-id="nav-link"
                                      href="/blogs"
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="NavItem__Container-sc-1cwb00j-0 lnnpdS"
                                        data-test-id="nav-link"
                                        href="/blogs"
                                        onClick={[Function]}
                                      >
                                        <Translate
                                          id="Blogs"
                                        >
                                          <WrappedTranslate
                                            context={
                                              Object {
                                                "activeLanguage": undefined,
                                                "addTranslation": [Function],
                                                "addTranslationForLanguage": [Function],
                                                "defaultLanguage": undefined,
                                                "ignoreTranslateChildren": false,
                                                "initialize": [Function],
                                                "languages": Array [],
                                                "renderToStaticMarkup": false,
                                                "setActiveLanguage": [Function],
                                                "translate": [Function],
                                              }
                                            }
                                            id="Blogs"
                                          >
                                            Missing translationId: Blogs for language: \${ languageCode }
                                          </WrappedTranslate>
                                        </Translate>
                                      </a>
                                    </NavItem__Container>
                                  </NavItem>
                                </li>
                              </NavContent__NavLi>
                            </ul>
                          </NavContent__NavUl>
                        </nav>
                      </NavContent__NavMenu>
                    </div>
                  </Col>
                </NavContent__MobileCol>
              </div>
            </Row>
          </div>
        </Container>
      </MobileContainer>
    </div>
  </NavContent__NavContainer>
</NavContent>
`;

exports[`Nav Content should render without throwing an error 1`] = `
<NavContent__NavContainer>
  <MobileContainer>
    <Row
      noGutters={false}
    >
      <Col
        lg={2}
      >
        <NavLogo />
      </Col>
      <NavContent__MobileCol
        fluid="true"
      >
        <NavContent__NavMenu>
          <NavContent__NavUl>
            <NavContent__NavLi
              key="Home"
            >
              <NavItem
                isMobile={false}
                isSelected={false}
                page={
                  Object {
                    "Icon": <FaHome
                      size="23px"
                    />,
                    "cmpName": "Home",
                    "isShowOnMobile": true,
                    "name": "Home",
                    "url": "/#Home",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Experiences"
            >
              <NavItem
                isMobile={false}
                isSelected={false}
                page={
                  Object {
                    "Icon": <FaBriefcase
                      size="23px"
                    />,
                    "cmpName": "Experiences",
                    "isShowOnMobile": true,
                    "name": "Experiences",
                    "url": "/#Experiences",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Projects"
            >
              <NavItem
                isMobile={false}
                isSelected={false}
                page={
                  Object {
                    "Icon": <FaCode
                      size="23px"
                    />,
                    "cmpName": "Projects",
                    "isShowOnMobile": true,
                    "name": "Projects",
                    "url": "/#Projects",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Certifications"
            >
              <NavItem
                isMobile={false}
                isSelected={false}
                page={
                  Object {
                    "Icon": <FaMedal
                      size="23px"
                    />,
                    "cmpName": "Certifications",
                    "isShowOnMobile": true,
                    "name": "Certifications",
                    "url": "/#Certifications",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Contacts"
            >
              <NavItem
                isMobile={false}
                isSelected={false}
                page={
                  Object {
                    "Icon": <FaAddressBook
                      size="23px"
                    />,
                    "cmpName": "Contacts",
                    "isShowOnMobile": true,
                    "name": "Contacts",
                    "url": "/#Contacts",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Blogs"
            >
              <NavItem
                isMobile={false}
                isSelected={false}
                page={
                  Object {
                    "cmpName": "blogs",
                    "isShowOnMobile": false,
                    "name": "Blogs",
                    "url": "/blogs",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
          </NavContent__NavUl>
        </NavContent__NavMenu>
      </NavContent__MobileCol>
    </Row>
  </MobileContainer>
</NavContent__NavContainer>
`;
